# goit_web

./: .gitignore  .test_module.py.swp  CRUD_07_01.db  lection_07_01.db  logs.txt  logss.txt  new_persons.html  sql_module02_l01.db  test2.db  test_module.py
alembci_learn/: alembci_learn.db  alembic.ini  pyproject.toml
alembci_learn/alembci_learn/: connect_db.py  main.py  main.sql  models.py  seed.py
alembci_learn/alembic/: env.py
alembci_learn/alembic/versions/: 700024032f4f_.py  b4772e3b4105_init.py
module13/fastapi_email_l1/: .env-example  .env-prod  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sql_app.db  test.db
module13/fastapi_email_l1/DEVELOPMENT/: tasapi_limiter_example.py  user_agent.py
module13/fastapi_email_l1/DEVELOPMENT/documents_example/: doc.py
module13/fastapi_email_l1/DEVELOPMENT/pytest_example/: db.py  test_db.py  test_fixtures_example.py  test_main.py  test_mock.py  test_parameters.py
module13/fastapi_email_l1/DEVELOPMENT/unittest_example/: ops.py  test_asyncio.py  test_list_length.py  test_multiplication.py  test_ops.py
module13/fastapi_email_l1/docs/: conf.py  index.rst
module13/fastapi_email_l1/postgres-data/: postmaster.pid
module13/fastapi_email_l1/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
module13/fastapi_email_l1/postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  (+1 more)
module13/fastapi_email_l1/src/: shemas.py
module13/fastapi_email_l1/templates/: email_template.html
module13/fastapi_email_l1/tests/: conftest.py  test_route_auth.py  test_unit_repository_notes.py
(+291 files in other folders)
