[tool.poetry]
name = "alembci-learn"
version = "0.1.0"
description = ""
authors = ["Ruslan-Skira <skira.ruslan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
